--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background: rebeccapurple;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav{
+  padding: 4px 32px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 75px;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.logo{
+  width: 250px;
+  height: auto;
+  /* font-family: 'Staatliches', cursive; */
+  font-family: 'Changa', sans-serif;
+  font-size: 40px;
+  text-align: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.links{
+  width: calc(50% - 150px);
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a{
+  text-decoration: none;
+  color: white;
+}
+
+section{
+  width: 90%;
+  height: calc(100vh - 75px);
+  margin: 0 auto;
 }
